# localprojections

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: panellpx_mwe.py
localprojections/: __init__.py  __main__.py  config.toml  lp.py
